--- a/shareDemo/demo2.html
+++ b/shareDemo/demo2.html
@@ -11,16 +11,14 @@
     <input type="text" v-model="msg">
     {{ msg }}
   </div>
-  <div id="jq">
-    <input type="text" id="inp">
-  </div>
   <script src="https://cdn.jsdelivr.net/npm/vue"></script>
-  <script src="../assets/jquery-3.2.1.min.js"></script>
   <script>
     var app = new Vue({
       el: '#app',
-      data: {
-        msg: 'hello vue!',
+      data: function() {
+        return {
+          msg: 'hello vue!',
+        }
       },
     })
   </script>
