--- a/shareDemo/demo13.html
+++ b/shareDemo/demo13.html
@@ -8,17 +8,18 @@
 </head>
 <body>
   <div id="app">
-    {{ msg }}
+    <my-component></my-component>
   </div>
   <script src="https://cdn.jsdelivr.net/npm/vue"></script>
   <script>
-    var app = new Vue({
+    var Child = {
+      template: '<div>A custom component!</div>'
+    }
+    new Vue({
       el: '#app',
-      data: function() {
-        return {
-          msg: 'hello vue!',
-        }
-      },
+      components: {
+        'my-component': Child
+      }
     })
   </script>
 </body>
