--- a/shareDemo/demo7.html
+++ b/shareDemo/demo7.html
@@ -8,17 +8,17 @@
 </head>
 <body>
   <div id="app">
-    {{ msg }}
+    <button @click="clickHandle">click</button>
   </div>
   <script src="https://cdn.jsdelivr.net/npm/vue"></script>
   <script>
     var app = new Vue({
       el: '#app',
-      data: function() {
-        return {
-          msg: 'hello vue!',
+      methods: {
+        clickHandle: function() {
+          alert('我被点击一下！');
         }
-      },
+      }
     })
   </script>
 </body>
