--- a/login2.html
+++ b/login2.html
@@ -25,23 +25,14 @@
       // };
 
       // const url = 'http://10.8.97.20:8080/ROMSService/system/role/allocateSave';
-      // $.ajax({
-      //     type: 'get',//or post
-      //     url: 'http://10.8.97.20:8080/ROMSService/system/role/allocateSave',
-      //     data: { 
-      //       id:12,
-      //       email:"asdfasfd",
-      //       g_token:"8a33d81068ce08ebdad78ad492d5e690",
-      //       g_userId:35,
-      //       g_time:"2017-09-20 10:29:05",
-      //       tsts:"asas"
-      //     },
-      //     dataType: 'json',
-      //     // contentType:"application/json",
-      //     success: function(res) {
-      //       console.log("jquery", res);
-      //     }
-      //   })
+      $.ajax({
+          type: 'get',//or post
+          url: 'https://baidu.com',
+          // contentType:"application/json",
+          success: function(res) {
+            console.log("jquery", res);
+          }
+        })
     };
   </script>
 </body>
